# MD_edamame

./: CMakeLists.txt  README.md
configs/: conf_test.in  melt_quench.in  melt_quench_NS3.in  simulate_MSD.in  simulate_MSD_NS2_1.in  simulate_MSD_NS2_2.in  simulate_MSD_NS3.in  simulate_MSD_NS3_1.in  simulate_MSD_NS3_2.in  simulate_anneal.in  test.in
configs/NS2/T3000/: MSD_0.in  MSD_1.in  MSD_2.in
configs/NS3/T3000/: MSD_0.in  MSD_1.in  MSD_2.in
data/: NS22_5.xyz  NS22_5_simulated.xyz  random_sio2.xyz  sample_NS2.xyz  sample_NS3.xyz  sample_NS4.xyz  saved_structure.xyz
data/POSCAR/: POSCAR_NS2  POSCAR_NS3  POSCAR_NS4
data/data/: sample_NS2.data  sample_NS22_5.data  sample_NS3.data  sample_NS4.data
html/: _atom_8hpp.html  _atom_8hpp.js  _atom_8hpp_source.html  _atoms_8hpp.html  _atoms_8hpp.js  _atoms_8hpp_source.html  _bussi_thermostat_8hpp.html  _bussi_thermostat_8hpp.js  _bussi_thermostat_8hpp_source.html  _command_8hpp.html  _command_8hpp.js  _command_8hpp_source.html  _config_reader_8hpp.html  _config_reader_8hpp.js  _config_reader_8hpp_source.html  _l_j_8hpp.html  _l_j_8hpp_source.html  _m_d_8hpp.html  _m_d_8hpp.js  _m_d_8hpp_source.html  _neighbour_list_8hpp.html  _neighbour_list_8hpp.js  _neighbour_list_8hpp_source.html  _nose_hoover_thermostat_8hpp.html  _nose_hoover_thermostat_8hpp.js  _nose_hoover_thermostat_8hpp_source.html  _thermostat_8hpp.html  _thermostat_8hpp.js  _thermostat_8hpp_source.html  annotated.html  annotated_dup.js  class_atom-members.html  class_atom.html  class_atom.js  class_atoms-members.html  class_atoms.html  class_atoms.js  class_bussi_thermostat-members.html  class_bussi_thermostat.html  class_bussi_thermostat.js  (+36 more)
html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_e.js  pages_0.js  pages_1.js  pages_2.js  (+5 more)
include/: Atom.hpp  Atoms.hpp  BussiThermostat.hpp  Command.hpp  ConfigReader.hpp  LJ.hpp  MD.hpp  MD.tpp  NeighbourList.hpp  NoseHooverThermostat.hpp  NoseHooverThermostats.hpp  NoseHooverThermostats_old.hpp  Thermostat.hpp  config.h  inference.hpp  xyz.hpp
models/: deployed_model_Na2O-SiO2.pt  deployed_model_SiO2.pt
python/: calc_msd.ipynb  convert.py  convert_traj.py  create_random.ipynb  create_sio2.py
src/: Atom.cpp  Atoms.cpp  BussiThermostat.cpp  ConfigReader.cpp  LJ.cpp  MD.cpp  NeighbourList.cpp  NoseHooverThermostat.cpp  NoseHooverThermostats.cpp  NoseHooveraThermostats_old.cpp  NoseHooverathermostats.cpp  main.cpp  main_LJ.cpp  main_LJ_NVE.cpp  main_LJ_NoseHoover.cpp  main_MD.cpp  main_MD_Bussi.cpp  main_MD_LJ.cpp  main_MD_NVT.cpp  main_MQ.cpp  main_NVT_MSD.cpp  sample.cpp  simulate_LJ.cpp  simulate_LJ_Bussi.cpp  simulate_LJ_NHC.cpp  simulate_LJ_NHC_torch.cpp  simulate_LJ_NHC_torch_2.cpp  simulate_LJ_NHC_torch_3.cpp  simulate_LJ_NHC_torch_4.cpp  test.cpp  xyz.cpp
